--- a/usr/local/etc/nginx/sites-enabled/webtrees.conf
+++ b/usr/local/etc/nginx/sites-enabled/webtrees.conf
@@ -1,1 +1,26 @@
+server {
+    listen      80;
+    server_name localhost;
+    set         $base /usr/local/www;
+    root        $base/webtrees;
 
+    # security
+    include     nginxconfig.io/security.conf;
+
+    # index.php
+    index       index.php;
+
+    # index.php fallback
+    location / {
+        try_files $uri $uri/ /index.php?$query_string;
+    }
+
+    # additional config
+    include nginxconfig.io/general.conf;
+
+    # handle .php
+    location ~ \.php$ {
+        fastcgi_pass unix:/var/run/php-fpm.sock;
+        include      nginxconfig.io/php_fastcgi.conf;
+    }
+}
